force-app/main/default/objects/Payment_Term__c/Payment_Term__c.object-meta.xml
<CustomObject>
    <label>Payment Term</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Payment Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>