force-app/main/default/objects/Payment_Term__c/fields/Contract_Gross__c.field-meta.xml
<CustomField>
    <fullName>Contract_Gross__c</fullName>
    <label>Contract Gross</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>