force-app/main/default/objects/Payment_Term__c/fields/Contract_Net__c.field-meta.xml
<CustomField>
    <fullName>Contract_Net__c</fullName>
    <formula>Contract_Gross__c * Marketing_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Net (legacy formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>