force-app/main/default/objects/Payment_Term__c/fields/Contract_Net_cny__c.field-meta.xml
<CustomField>
    <fullName>Contract_Net_cny__c</fullName>
    <label>Contract Net</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>