force-app/main/default/objects/Payment_Term__c/fields/Marketing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Fee__c</fullName>
    <label>Marketing Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>